OPHJOD-2494: Added regions to ehdotusmetadata